Fix project layout gaps

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1218,7 +1218,7 @@ section#contact .socials .social:hover {
     width: 100%;
   }
   .pythonProjects {
-    margin: 0;
+    margin-top: 0;
     padding: 4rem 0rem 2rem 0rem;
   }
   .pythonProjects h1 {
