--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -349,7 +349,7 @@
     }
 
     .pythonProjects{
-        margin: 0;
+        margin-top: 0;
         padding: 4rem 0rem 2rem 0rem;
 
         h1{
