--- a/css/styles.css
+++ b/css/styles.css
@@ -1221,7 +1221,7 @@ section#contact .socials .social:hover {
     width: 100%;
   }
   .pythonProjects {
-    margin: 0;
+    margin-top: 0;
     padding: 4rem 0rem 2rem 0rem;
   }
   .pythonProjects h1 {
